--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
             <h2>pruductos disponibles</h2>
             <tr>
                 <th>
-                    <a href="narinia.com/Cod-Points/"><img src="https://static1-es.millenium.gg/articles/2/84/12/@/42912-cp-article_m-1.jpg" class="img" alt=""><p>Cod Points</p></a>
+                    <a href="codpoints.html"><img src="CP.png" class="img" alt=""><p>Cod Points</p></a>
                 </th>
             </tr>
             <tr>
                 <th>
-                    <a href="narnia.com/diamantes"><img src="https://www.mundodeportivo.com/alfabeta/hero/2021/07/diamantes-gratis-free-fire.jpg?width=1200" class="img" alt=""><p>diamantes</p></a>
+                    <a href="diamantes.html"><img src="diamantes.png" class="img" alt=""><p>diamantes</p></a>
                 </th>
             </tr>
         </thead>
